# pretus

./: .gitignore  LICENSE  README.md
.github/: print_system.py  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  not_working.md
dependencies/: README.md
dependencies/virtual-environment/: README.md  ve.yml
docs/: contributing.md
docs/Doxygen/: doxygen.config.in
src/: CMakeLists.txt  README.md  troubleshooting.md
src/App/: CMakeLists.txt
src/App/PRETUS/: CMakeLists.txt  README.md  main.cxx  my_config.h.in
src/Common/: CMakeLists.txt  InputParser.cxx  InputParser.h  README.md  ifindImage.cxx  ifindImage.h  ifindImagePeriodicTimer.cxx  ifindImagePeriodicTimer.h  ifindImageReader.cxx  ifindImageReader.h  ifindImageWriter.cxx  ifindImageWriter.h  ifindMetaDataHelper.cxx  ifindMetaDataHelper.h  ifindStreamTypeHelper.h
src/PluginLib/: BasicVTKVisualization.cxx  BasicVTKVisualization.h  CMakeLists.txt  Manager.cxx  Manager.h  Plugin.cxx  Plugin.h  QtFixedAspectRatio.cxx  QtFixedAspectRatio.h  QtInfoPanelBase.cxx  QtInfoPanelBase.h  QtInfoPanelTrafficLightBase.cxx  QtInfoPanelTrafficLightBase.h  QtLevelMeter.cxx  QtLevelMeter.h  QtPluginWidgetBase.cxx  QtPluginWidgetBase.h  QtVTKVisualization.cxx  QtVTKVisualization.h  README.md  VisualizationConsts.cxx  VisualizationConsts.h  Worker.cxx  Worker.h  vtkLookupTableGenerator.cxx  vtkLookupTableGenerator.h
src/Plugins/: CMakeLists.txt  README.md  requirements_low.txt
src/Plugins/Plugin_CppAlgorithm/: CMakeLists.txt  Plugin_CppAlgorithm.cxx  Plugin_CppAlgorithm.h  README.md  README.md.backup  Widget_CppAlgorithm.cxx  Widget_CppAlgorithm.h  Worker_CppAlgorithm.cxx  Worker_CppAlgorithm.h
src/Plugins/Plugin_GUI/: CMakeLists.txt  Plugin_GUI.cxx  Plugin_GUI.h  QtVisualizationMainWindow.cxx  QtVisualizationMainWindow.h  README.md  Widget_GUI.cxx  Widget_GUI.h  Worker_visualizer.cxx.tmp  Worker_visualizer.h.tmp
src/Plugins/Plugin_PnPframegrabber/: CMakeLists.txt  Plugin_PnPframegrabber.cxx  Plugin_PnPframegrabber.h  PnPFGMiniworker.cxx  PnPFGMiniworker.h  PnPFrameGrabberManager.cxx  PnPFrameGrabberManager.h  README.md  Widget_PnPframegrabber.cxx  Widget_PnPframegrabber.h  capture_video.py  standalone_PnPframegrabber.cxx
src/Plugins/Plugin_PythonAlgorithm/: CMakeLists.txt  Plugin_PythonAlgorithm.cxx  Plugin_PythonAlgorithm.h  README.md  Widget_PythonAlgorithm.cxx  Widget_PythonAlgorithm.h  Worker_PythonAlgorithm.cxx  Worker_PythonAlgorithm.h  plugin_PythonAlgorithm_config.h.in
src/Plugins/Plugin_PythonAlgorithm/python/: demo.py  demo.py.autosave  worker.py
src/Plugins/Plugin_filemanager/: CMakeLists.txt  FileManager.cxx  FileManager.h  Plugin_filemanager.cxx  Plugin_filemanager.h  README.md  Widget_filemanager.cxx  Widget_filemanager.h
src/Plugins/Plugin_framegrabber/: CMakeLists.txt  FGMiniworker.cxx  FGMiniworker.h  FrameGrabberManager.cxx  FrameGrabberManager.h  Plugin_framegrabber.cxx  Plugin_framegrabber.h  README.md  Widget_framegrabber.cxx  Widget_framegrabber.h  standalone_framegrabber.cxx
src/Plugins/Plugin_framegrabber/epiphansdk/: CMakeLists.txt  epiphansdk_video_source.cpp  epiphansdk_video_source.h
src/Plugins/Plugin_framegrabber/giftgrabapi/: CMakeLists.txt
src/Plugins/Plugin_imageFileWriter/: CMakeLists.txt  Plugin_imageFileWriter.cxx  Plugin_imageFileWriter.h  README.md  Widget_imageFileWriter.cxx  Widget_imageFileWriter.h
src/Plugins/Plugin_planeDetection/: CMakeLists.txt  Plugin_planeDetection.cxx  Plugin_planeDetection.h  README.md  Widget_planeDetection.cxx  Widget_planeDetection.h  Worker_planeDetection.cxx  Worker_planeDetection.h  plugin_planeDetection_config.h.in
src/Plugins/Plugin_planeDetection/spd_pytorch/: README.md  demo.py  planedetect2.py  run.sh  standalone.py  standardplanedetection_worker.py  train_classifaction.py  worker.py
src/Plugins/Plugin_planeDetection/spd_pytorch/checkpoints/ifind1_sononet_8/: 090_net_S_iFind2_newBg.pth  300_net_S.pth  iFind2_net_300.pth  ifind2_net_Jan15.pth  ifind2all_net.pth
src/Plugins/Plugin_planeDetection/spd_pytorch/configs/: config_sononet_8.json
src/Plugins/Plugin_planeDetection/spd_pytorch/dataio/loader/: __init__.py  us_dataset.py
src/Plugins/Plugin_planeDetection/spd_pytorch/models/: __init__.py  base_model.py  feedforward_classifier.py  utils.py
src/Plugins/Plugin_planeDetection/spd_pytorch/models/layers/: loss.py
src/Plugins/Plugin_planeDetection/spd_pytorch/models/networks/: __init__.py  sononet.py  utils.py
src/Plugins/Plugin_planeDetection/spd_pytorch/spd_utils/: metrics.py
src/Plugins/Plugin_planeDetection/spd_pytorch/test_data/: image_transducer0_2D_1558092496062_layer0.mhd  image_transducer0_2D_1558092496062_layer0.raw  image_transducer0_2D_1558092754103_layer0.mhd  image_transducer0_2D_1558092754103_layer0.raw  image_transducer0_2D_1558092927832_layer0.mhd  image_transducer0_2D_1558092927832_layer0.raw  image_transducer0_2D_1558092947471_layer0.mhd  image_transducer0_2D_1558092947471_layer0.raw
src/Plugins/Plugin_planeDetection/spd_pytorch/utils/: util.py
src/Plugins/Plugin_videomanager/: CMakeLists.txt  Plugin_videomanager.cxx  Plugin_videomanager.h  README.md  VideoManager.cxx  VideoManager.h  Widget_videomanager.cxx  Widget_videomanager.h
